[metadata]
# replace with your username:
name = pythoncalculator
version = 0.0.1
author = Nina Maaranen
author_email = n.maaranen@sheffield.ac.uk
description = Perform basic calculations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmaaranen/python-calculator
project_urls =
    Bug Tracker = https://github.com/nmaaranen/python-calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
